# Codings

./: .gitignore  README.md
ch3-导论/Hello/: Makefile
ch3-导论/Hello/src/main/scala/: Hello.scala
computer-graphics/lab/: README.md
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/: CMakeLists.txt
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array/: CMakeLists.txt
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array0/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array1.0/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array1.1/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array2/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array3/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array4/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/documents/1_BasicDArray/C2Cpp/src/Array5/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/projects/: CMakeLists.txt
computer-graphics/lab/0_CppPractices/projects/include/: PolynomialMap.h
computer-graphics/lab/0_CppPractices/projects/src/executables/1_BasicDArray/: CMakeLists.txt  DArray.cpp
computer-graphics/lab/0_CppPractices/projects/src/executables/2_EfficientDArray/: CMakeLists.txt  DArray.cpp
computer-graphics/lab/0_CppPractices/projects/src/executables/3_TemplateDArray/: CMakeLists.txt  DArray.cpp  DArray.h
computer-graphics/lab/0_CppPractices/projects/src/executables/4_ListPolynomial/: CMakeLists.txt  main.cpp
computer-graphics/lab/0_CppPractices/projects/src/executables/5_MapPolynomial/: CMakeLists.txt
computer-graphics/lab/0_CppPractices/projects/src/libraries/shared/: CMakeLists.txt  PolynomialList.cpp
computer-graphics/lab/0_CppPractices/projects/src/libraries/static/: CMakeLists.txt  PolynomialMap.cpp
computer-graphics/lab/1_MiniDraw/documents/: QtGDI.md
computer-graphics/lab/1_MiniDraw/documents/example/: CMakeLists.txt
computer-graphics/lab/1_MiniDraw/documents/example/src/: example.cpp  example.h  example.ui  main.cpp
computer-graphics/lab/1_MiniDraw/documents/hello/: CMakeLists.txt
computer-graphics/lab/1_MiniDraw/documents/hello/src/: mainwindow.cpp  mainwindow.h
computer-graphics/lab/1_MiniDraw/project/App/: CMakeLists.txt
computer-graphics/lab/1_MiniDraw/project/App/src/: Ellipse.cpp  Ellipse.h  FreeHand.cpp  FreeHand.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  main.cpp  minidraw.cpp  minidraw.h  minidraw.ui  viewwidget.cpp  viewwidget.h  viewwidget.ui
computer-graphics/ppt/: CG02_Programming.ppt
hands-on-AI/实践/10-注意力机制/: 10.1-注意力提示.ipynb  10.2-注意力汇聚.ipynb  10.3-注意力评分函数.ipynb  10.4-Bahdanau注意力.ipynb  10.5-多头注意力.ipynb  10.6-自注意力和位置编码.ipynb  10.7-Transformer.ipynb
hands-on-AI/实践/2-预备知识/: 2.1-数据操作.ipynb  2.2-数据预处理.ipynb  2.3-线性代数.ipynb  2.4-微积分.ipynb  2.5-自动微分.ipynb  2.6-概率.ipynb
hands-on-AI/实践/3-线性神经网络/: 3.1-线性回归.ipynb  3.2-线性回归的从零开始实现.ipynb  3.3-线性回归的简洁实现.ipynb  3.4-softmax回归.ipynb  3.5-图像分类数据集.ipynb  3.6-softmax回归的从零开始实现.ipynb  3.7-softmax回归的简洁实现.ipynb
hands-on-AI/实践/4-多层感知机/: 4.1-多层感知机.ipynb  4.10-实战Kaggle比赛.ipynb  4.2-多层感知机的从零开始实现.ipynb  4.3-多层感知机的简洁实现.ipynb  4.4-模型选择、欠拟合和过拟合.ipynb  4.5-权重衰减.ipynb  4.6-暂退法.ipynb  4.7-前向传播、反向传播和计算图.ipynb  4.8-数值稳定性和模型初始化.ipynb  4.9-环境和分布偏移.ipynb
hands-on-AI/实践/5-深度学习计算/: 5.1-层和块.ipynb  5.2-参数管理.ipynb  5.3-延后初始化.ipynb  5.4-自定义层.ipynb  5.5-读写文件.ipynb  5.6-GPU.ipynb
hands-on-AI/实践/6- 卷积神经网络/: 6.1-从全连接到卷积.ipynb  6.2-图像卷积.ipynb  6.3-填充和步幅.ipynb  6.4-多输入多输出通道.ipynb  6.5-汇聚层.ipynb  6.6-卷积神经网络.ipynb
hands-on-AI/实践/7-现代卷积神经网络/: 7.1-深度卷积神经网络.ipynb  7.2-使用块的网络.ipynb  7.3-网络中的网络.ipynb  7.4-含并行连结的网络.ipynb  7.5-批量规范化.ipynb  7.6-残差网络.ipynb  7.7-稠密连接网路.ipynb
hands-on-AI/实践/8-循环神经网络/: 8.1-序列模型.ipynb  8.2-文本预处理.ipynb  8.3-语言模型和数据集.ipynb  8.4-循环神经网络.ipynb  8.5-循环神经网络的从零开始实现.ipynb  8.6-循环神经网络的简洁实现.ipynb  8.7-通过时间反向传播.ipynb
hands-on-AI/实践/9-现代循环神经网络/: 9.1-门控循环单元.ipynb  9.2-长短期记忆网络.ipynb  9.3-深度循环神经网络.ipynb  9.4-双向循环神经网络.ipynb  9.5-机器翻译与数据集.ipynb  9.6-编码器-解码器架构.ipynb  9.7-序列到序列学习.ipynb  9.8-束搜索.ipynb
kilo/ckilo/: CMakeLists.txt  Makefile  kilo.c  yy.c
kilo/ckilo/include/: common.h  editor.h  highlight.h  row.h  terminal.h
kilo/ckilo/src/: editor.c  highlight.c  main.c  row.c  terminal.c
kilo/rkilo/: Cargo.toml
kilo/rkilo/src/: document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
learn-opengl-cn/: CMakeLists.txt  makefile  readme.md
learn-opengl-cn/include/: camera.h  mesh.h  model.h  shader.h
learn-opengl-cn/include/glad/: glad.h
learn-opengl-cn/include/mylib/: camera.h  mesh.h  model.h
learn-opengl-cn/shaders/: shader.fs  shader.vs
learn-opengl-cn/src/: camera.cc  glad.c  imgui_example.cc  main.cc  mesh.cc  model.cc  shader.cc
learn-opengl-cn/src/image/: stb_image.c
learn-opengl-cn/src/mylib/: camera.cc  mesh.cc  model.cc  shader.cc
plane-war/: PlaneWar.pro  bomb.cpp  bomb.h  bullet.cpp  bullet.h  config.h  enemyplane.cpp  enemyplane.h  heroplane.cpp  heroplane.h  main.cpp  mainscene.cpp  mainscene.h  map.cpp  map.h  res.qrc
