cmake_minimum_required(VERSION 3.12)
project(C2Cpp)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array0)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array1.0)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array1.1)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array2)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array3)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array4)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Array5)
